<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="match_parent"
              android:gravity="center_horizontal">


    <EditText
              android:id="@+id/dialog_register_text"
              android:layout_width="300dp"
              android:layout_height="wrap_content"
              android:hint="@string/hint_enter_passcode"
            />

    <EditText
              android:id="@+id/dialog_register_deviceName"
              android:layout_width="300dp"
              android:layout_height="wrap_content"
              android:hint="@string/hint_enter_deviceName"/>

    <Button
            android:id="@+id/dialog_register_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_register_registerButton"/>

</LinearLayout>