<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/ab_parent"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@color/ginsoy_primary"
               >

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="400dp"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp">

                <TextView
                        android:id="@+id/ab_textTotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_text"
                        android:textSize="30sp"
                        android:textColor="@color/white"

                        />

                <TextView
                        android:id="@+id/ab_total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="30sp"
                        android:text="@string/zero"
                        android:textColor="@color/white"
                        android:layout_marginRight="20dp"/>



                <TextView
                        android:id="@+id/ab_quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="@string/zero_quantity"
                        android:textSize="30sp"
                        android:layout_marginRight="60dp"/>
            </LinearLayout>

    <Button
            android:id="@+id/ab_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/button_bg_white"
            android:text="@string/view_cart"
            android:textColor="@color/ginsoy_primary"
            android:layout_marginRight="40dp"/>


</RelativeLayout>